--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: Abnormal Activity Detection with Human Pose Estimation
+title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
 description: Royston Rodrigues
 github:
-  zip_url: http://example.com/download.zip
-  another_url: another value
+  zip_url: www.gmail.com
+  another_url: www.gmail.com
