--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-cayman
-title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
+title: Multi-timescale Trajectory Prediction 
+for 
+Abnormal Human Activity Detection
 description: Royston Rodrigues
 github:
   zip_url: www.gmail.com
