--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: Multi-timescale Trajectory Prediction 
-for 
+title: Multi-timescale Trajectory Prediction \n
+for \n
 Abnormal Human Activity Detection
 description: Royston Rodrigues
 github:
