--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 theme: jekyll-theme-cayman
-title: Multi-timescale Trajectory Prediction \n
-for \n
-Abnormal Human Activity Detection
+title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
 description: Royston Rodrigues
 github:
   zip_url: www.gmail.com
