--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-cayman
 title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
-description: Royston Rodrigues
-github:
-  zip_url: www.gmail.com
+description: Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri 
+github: zip_url: www.gmail.com
   another_url: www.gmail.com
