--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
-description: **Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri **
+description: Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri
 description: Department of Electrical Engineering, Indian Institute of Technology, Bombay
 github:
   zip_url: www.gmail.com
