--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
 description: Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri
-             Department of Electrical Engineering, Indian Institute of Technology, Bombay
+\n Department of Electrical Engineering, Indian Institute of Technology, Bombay
 github:
   zip_url: www.gmail.com
   another_url: www.gmail.com
