--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detection
 description: Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri
-
 github:
-  zip_url: www.gmail.com
-  another_url: www.gmail.com
+ repository_url: http://example.com
+ zip_url: www.gmail.com
+ another_url: www.gmail.com
