--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detecti
 description: Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri
 github:
  repository_url: http://example.com
- zip_url: www.gmail.com
+ zip_url: http://www.gmail.com
 
