--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detecti
 description: Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri
 github:
  repository_url: http://example.com
+show_downloads:
  zip_url: http://www.gmail.com
 
