--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detecti
 description: Indian Institute of Technology Bombay
 github:
  repository_url: https://github.com/Rodrigues-Royston/Multi-timescale-Trajectory-Prediction-for-Abnormal-Human-Activity-Detection/blob/master/README.md
- arxiv: http://example.com
+ arxiv: https://arxiv.org/abs/1908.04321
 
 
