--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: Multi-timescale Trajectory Prediction for Abnormal Human Activity Detecti
 description: Indian Institute of Technology Bombay
 github:
  repository_url: https://github.com/Rodrigues-Royston/Multi-timescale-Trajectory-Prediction-for-Abnormal-Human-Activity-Detection/blob/master/README.md
- arxiv: https://arxiv.org/abs/1908.04321
+ arxiv: http://openaccess.thecvf.com/content_WACV_2020/html/Rodrigues_Multi-timescale_Trajectory_Prediction_for_Abnormal_Human_Activity_Detection_WACV_2020_paper.html
 
 
